# stock-trading-simulator-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_tests  stock_trading_simulator
data/stocks/: A.csv  AAL.csv  AAP.csv  AAPL.csv  ABBV.csv  ABC.csv  ABT.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADS.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AET.csv  AFL.csv  AGN.csv  AIG.csv  AIV.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALK.csv  ALL.csv  ALLE.csv  ALXN.csv  AMAT.csv  AMD.csv  AME.csv  AMG.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANDV.csv  (+465 more)
include/model/account/: Account.h  CashAccount.h
include/model/exception/: DomainException.h  InsufficientFundsException.h  InvalidOrderException.h
include/observer/: TradeObserver.h
include/repository/: InMemoryRepositories.h  OrderRepository.h  PortfolioRepository.h  TradeRepository.h  UserRepository.h
include/service/: AppContext.h  AuthenticationService.h  ExecutionResult.h  MarketDataService.h  OrderBook.h  OrderValidator.h  PortfolioService.h  Result.h  Session.h  TradingEngine.h  TradingService.h
include/strategy/: LimitOrderExecutor.h  MarketOrderExecutor.h  OrderExecutionStrategy.h  StopLossExecutor.h
include/util/: CsvDataLoader.h
src/: main.cpp
src/service/: AppContext.cpp  AuthenticationService.cpp  ExecutionResult.cpp  MarketDataService.cpp  OrderBook.cpp  OrderValidator.cpp  PortfolioService.cpp  TradingEngine.cpp  TradingService.cpp
src/strategy/: LimitOrderExecutor.cpp  MarketOrderExecutor.cpp  StopLossExecutor.cpp
src/util/: CsvDataLoader.cpp
tests/: run_tests.cpp
(+30 files in other folders)
